Fixed shifted loading background style

--- a/src/Rcm.Web/wwwroot/css/daily.css
+++ b/src/Rcm.Web/wwwroot/css/daily.css
@@ -34,5 +34,5 @@
 }
 
 *[data-presence] {
-    margin-top: 2rem;
+    padding-top: 2rem;
 }
